--- a/INFO.html
+++ b/INFO.html
@@ -5,7 +5,7 @@
 <body class ="barra">
 <audio src="http://download2265.mediafire.com/7kmkqllcm6lg/3zsr72umikl9169/amanecer_en_el_pueblo_5.mp3">
 </audio>
-<body background="https://images.pexels.com/photos/1092364/pexels-photo-1092364.jpeg?cs=srgb&dl=bricks-brickwall-brickwork-1092364.jpg&fm=jpg">
+<body background="https://media.giphy.com/media/a3DDodjzlibOo/giphy.gif">
 <marquee>
 <font color=black face= Comic Sans MS size=36>
 <h1><i><b> Ambiente Virtual de Aprendizaje </b></i></h1>
@@ -28,7 +28,7 @@
 </td>
 </tr>
 <td colspan="3" align="center">
-<font color="black" size="10"> La plataforma de e-learning, campus virtual o Learning Management System (LMS) es un espacio virtual de aprendizaje orientado a facilitar la experiencia de capacitación a distancia, tanto para empresas como para instituciones educativas.
+<font color="black" size="10"> La plataforma de e-learning, campus virtual o Learning Management System (LMS) es un espacio virtual de aprendizaje orientado a facilitar la experiencia de capacitaciÃ³n a distancia, tanto para empresas como para instituciones educativas.
 </td>
 <tr>
 <td align="center">
@@ -45,7 +45,7 @@
 </td>
 </tr>
 <td colspan="3" align="center">
-<font color="black" size="10">La expresión (en inglés, blended learning) hace referencia a la combinación de la capacitación presencial (con profesores en un aula) con la educación online (cursos en internet o medios digitales). El b-learning es por lo tanto un sistema híbrido de aprendizaje en el que se mezclan estos dos sistemas.
+<font color="black" size="10">La expresiÃ³n (en inglÃ©s, blended learning) hace referencia a la combinaciÃ³n de la capacitaciÃ³n presencial (con profesores en un aula) con la educaciÃ³n online (cursos en internet o medios digitales). El b-learning es por lo tanto un sistema hÃ­brido de aprendizaje en el que se mezclan estos dos sistemas.
 </td>
 <tr>
 <td align="center">
@@ -63,7 +63,7 @@
 </td>
 </tr>
 <td colspan="3" align="center">
-<font color="black" size="10">El Mobile learning, como su nombre lo indica, es el aprendizaje empleando dispositivos móviles como herramientas. Es la evolución del E-learning abriéndose paso con los teléfonos inteligentes o tablets.
+<font color="black" size="10">El Mobile learning, como su nombre lo indica, es el aprendizaje empleando dispositivos mÃ³viles como herramientas. Es la evoluciÃ³n del E-learning abriÃ©ndose paso con los telÃ©fonos inteligentes o tablets.
 </td>
 <tr>
 <td align="center">
@@ -75,8 +75,8 @@
 </td>
 </tr>
 </table>
-<font size="20"><h3 class=headberdar">Más Información</h3></font>
-<ul class="submenú">
+<font size="20"><h3 class=headberdar">MÃ¡s InformaciÃ³n</h3></font>
+<ul class="submenÃº">
 <font size="20"><li><a href="https://www.e-abclearning.com/queesunaplataformadeelearning/">E learning</a></li></font>
 <font size="20"><li><a href="https://www.game-learn.com/todo-necesitas-saber-sobre-b-learning-definicion-ejemplos/">B learning</a></li></font>
 <font size="20"><li><a href="https://justificaturespuesta.com/m-learning-que-es-para-que-sirve-usos-en-aula/">M learning</a></li></font>
