--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body class ="barra">
 <audio src="https://github.com/xthewu03/Informatica/raw/gh-pages/y2mate.com%20-%20thefatrat_no_no_no_d0uFvhCHWCo.mp3" controls>
 </audio>
-<body background="https://media.giphy.com/media/a3DDodjzlibOo/giphy.gif">
+<body background="https://i.gifer.com/J4o.gif">
 <marquee>
 <font color=black face= Comic Sans MS size=36>
 <h1><i><b> Ambiente Virtual de Aprendizaje </b></i></h1>
