--- a/index.html
+++ b/index.html
@@ -7,28 +7,28 @@
 </audio>
 <body background="https://i.gifer.com/J4o.gif">
 <marquee>
-<font color=black face= Comic Sans MS size=36>
+<font color=white face= Comic Sans MS size=36>
 <h1><i><b> Ambiente Virtual de Aprendizaje </b></i></h1>
 </font>
 </marquee>
 <br> <br>
-<font color="black" size="30"> <p><h1>Ambiente Virtual de Aprendizaje </p></h1> </font>
-<font color="black" size="30"> <p><h1> Indice </p></h1> </font>
+<font color="white" size="30"> <p><h1>Ambiente Virtual de Aprendizaje </p></h1> </font>
+<font color="whitek" size="30"> <p><h1> Indice </p></h1> </font>
 <tr align="center">
-<P><font color="black" size="15"> <a href=#E> *E-Learning </a></font></P>
-<P><font color="black" size="15"> <a href=#B> *B-Learning </a></font></P>
-<P><font color="black" size="15"> <a href=#M> *M-Learning </a></font></P>
+<P><font color="white" size="15"> <a href=#E> *E-Learning </a></font></P>
+<P><font color="white" size="15"> <a href=#B> *B-Learning </a></font></P>
+<P><font color="white" size="15"> <a href=#M> *M-Learning </a></font></P>
 <br> <br>
 <p align= center>
 <img src="https://cdn.thinglink.me/api/image/1123799019135434755/1240/10/scaletowidth">
 <table border="2" cellpading="5">
 <tr>
 <td colspan="3" align="center">
-<font color="black" size="20"><b><i><u><a name="E">E-Learning</a></u></i></b></font>
+<font color="white" size="20"><b><i><u><a name="E">E-Learning</a></u></i></b></font>
 </td>
 </tr>
 <td colspan="3" align="center">
-<font color="black" size="10"> La plataforma de e-learning, campus virtual o Learning Management System (LMS) es un espacio virtual de aprendizaje orientado a facilitar la experiencia de capacitación a distancia, tanto para empresas como para instituciones educativas.
+<font color="white" size="10"> La plataforma de e-learning, campus virtual o Learning Management System (LMS) es un espacio virtual de aprendizaje orientado a facilitar la experiencia de capacitación a distancia, tanto para empresas como para instituciones educativas.
 </td>
 <tr>
 <td align="center">
@@ -41,11 +41,11 @@
 </tr>
 <tr>
 <td colspan="3" align="center">
-<font color="black" size="20"><b><i><u><a name="B">B-Learning</a></u></i></b></font>
+<font color="white" size="20"><b><i><u><a name="B">B-Learning</a></u></i></b></font>
 </td>
 </tr>
 <td colspan="3" align="center">
-<font color="black" size="10">La expresión (en inglés, blended learning) hace referencia a la combinación de la capacitación presencial (con profesores en un aula) con la educación online (cursos en internet o medios digitales). El b-learning es por lo tanto un sistema híbrido de aprendizaje en el que se mezclan estos dos sistemas.
+<font color="white" size="10">La expresión (en inglés, blended learning) hace referencia a la combinación de la capacitación presencial (con profesores en un aula) con la educación online (cursos en internet o medios digitales). El b-learning es por lo tanto un sistema híbrido de aprendizaje en el que se mezclan estos dos sistemas.
 </td>
 <tr>
 <td align="center">
@@ -59,11 +59,11 @@
 
 <tr>
 <td colspan="3" align="center">
-<font color="black" size="20"><b><i><u><a name="M">M-Learning</a></u></i></b></font>
+<font color="white" size="20"><b><i><u><a name="M">M-Learning</a></u></i></b></font>
 </td>
 </tr>
 <td colspan="3" align="center">
-<font color="black" size="10">El Mobile learning, como su nombre lo indica, es el aprendizaje empleando dispositivos móviles como herramientas. Es la evolución del E-learning abriéndose paso con los teléfonos inteligentes o tablets.
+<font color="white" size="10">El Mobile learning, como su nombre lo indica, es el aprendizaje empleando dispositivos móviles como herramientas. Es la evolución del E-learning abriéndose paso con los teléfonos inteligentes o tablets.
 </td>
 <tr>
 <td align="center">
