--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </marquee>
 <br> <br>
 <font color="white" size="30"> <p><h1>Ambiente Virtual de Aprendizaje </p></h1> </font>
-<font color="whitek" size="30"> <p><h1> Indice </p></h1> </font>
+<font color="white" size="30"> <p><h1> Indice </p></h1> </font>
 <tr align="center">
 <P><font color="white" size="15"> <a href=#E> *E-Learning </a></font></P>
 <P><font color="white" size="15"> <a href=#B> *B-Learning </a></font></P>
