--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <tr>
 <td align="center">
 <video controls width="750" height="650">
-<source src="E-Learning.mp4">
+<source src="http://download2263.mediafire.com/bkukxo7sckrg/443ikk4fyokb4lq/Metodolog%C3%ADa+de+Aprendizaje+E-Learning.mp4">
 </td>
 <td align="center">
 <img src="https://cdn2.ticbeat.com/src/uploads/2018/06/elearning-810x602.jpg?x32709" height="550" width="650">
@@ -50,7 +50,7 @@
 <tr>
 <td align="center">
 <video controls width="750" height="650">
-<source src="B-Learning.mp4">
+<source src="http://download1081.mediafire.com/kngm7bck1bpg/mp4odhwo4hpg0og/%C2%BFQue+es+el+B-Learning.mp4">
 </td>
 <td align="center">
 <img src="https://cdn.goconqr.com/uploads/media/image/11833101/desktop_f05b9a26-bdcb-4a84-b180-c752eaeceb97.png" height="550" width="650">
@@ -68,7 +68,7 @@
 <tr>
 <td align="center">
 <video controls width="750" height="650">
-<source src="M-Learning.mp4">
+<source src="http://download1498.mediafire.com/irzc4rrkzxbg/wrdx5yr4o106i7q/Mobile+learning+-+Espa%C3%B1ol.mp4">
 </td>
 <td align="center">
 <img src="https://userscontent2.emaze.com/images/00036f15-d194-4584-998d-ecbac1d125cb/f032fa22cf68e62d26fc523ed15731ab.png" height="550" width="650">
