--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <P><font color="white" size="15"> <a href=#M> *M-Learning </a></font></P>
 <br> <br>
 <p align= center>
-<img src="https://campus.usal.edu.ar/pluginfile.php/50384/mod_book/chapter/11583/EVA.jpg">
+<img src="https://campus.usal.edu.ar/pluginfile.php/50384/mod_book/chapter/11583/EVA.jpg" width="100" height="100">
 <table border="2" cellpading="5">
 <tr>
 <td colspan="3" align="center">
