--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
 <font size="20"><li><a href="https://www.e-abclearning.com/queesunaplataformadeelearning/">E learning</a></li></font>
 <font size="20"><li><a href="https://www.game-learn.com/todo-necesitas-saber-sobre-b-learning-definicion-ejemplos/">B learning</a></li></font>
 <font size="20"><li><a href="https://justificaturespuesta.com/m-learning-que-es-para-que-sirve-usos-en-aula/">M learning</a></li></font>
-<style type="text/css">body, a, a:hover {cursor: url(http://cur.cursors-4u.net/symbols/sym-6/sym549.ani), progress;}</style> 
+<style>
+body {   
+cursor:url(http://www.creatupropiaweb.com/mouse2.cur); }
+</style>    
 </body>
 </html>
