--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <tr>
 <td align="center">
 <video controls width="750" height="650">
-<video src="<iframe width="1280" height="720" src="https://www.youtube.com/embed/Kr58VrT57Q4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>">
+<source src="<iframe width="1280" height="720" src="https://www.youtube.com/embed/Kr58VrT57Q4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>">
 </td>
 <td align="center">
 <img src="https://cdn.goconqr.com/uploads/media/image/11833101/desktop_f05b9a26-bdcb-4a84-b180-c752eaeceb97.png" height="550" width="650">
