--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <tr>
 <td align="center">
 <video controls width="750" height="650">
-<video src="<iframe width="1280" height="720" src="https://www.youtube.com/embed/KJq6VSWXh1E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>">
+<video src="<iframe width="1280" height="720" src="https://www.youtube.com/embed/KJq6VSWXh1E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" type="video/mp4" allowfullscreen></iframe>">
 </td>
 <td align="center">
 <img src="https://cdn2.ticbeat.com/src/uploads/2018/06/elearning-810x602.jpg?x32709" height="550" width="650">
@@ -49,7 +49,7 @@
 <tr>
 <td align="center">
 <video controls width="750" height="650">
-<video src="<iframe width="1280" height="720" src="https://www.youtube.com/embed/Kr58VrT57Q4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>">
+<video src="<iframe width="1280" height="720" src="https://www.youtube.com/embed/Kr58VrT57Q4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" type="video/mp4" allowfullscreen></iframe>">
 </td>
 <td align="center">
 <img src="https://cdn.goconqr.com/uploads/media/image/11833101/desktop_f05b9a26-bdcb-4a84-b180-c752eaeceb97.png" height="550" width="650">
@@ -66,7 +66,7 @@
 <tr>
 <td align="center">
 <video controls width="750" height="650">
-<video src="<iframe width="1280" height="720" src="https://www.youtube.com/embed/wU2kGrtitOk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>">
+<video src="<iframe width="1280" height="720" src="https://www.youtube.com/embed/wU2kGrtitOk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" type="video/mp4" allowfullscreen></iframe>">
 </td>
 <td align="center">
 <img src="https://userscontent2.emaze.com/images/00036f15-d194-4584-998d-ecbac1d125cb/f032fa22cf68e62d26fc523ed15731ab.png" height="550" width="650">
