--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <tr>
 <td align="center">
 <video controls width="750" height="650">
-<video src="http://download1643.mediafire.com/quzoqv8aldhg/r4lbcyqx5s69bh2/Metodolog%C3%ADa+de+Aprendizaje+E-Learning.mp4" type="video/mp4" allowfullscreen></iframe>">
+<video src="http://download1643.mediafire.com/quzoqv8aldhg/r4lbcyqx5s69bh2/Metodolog%C3%ADa+de+Aprendizaje+E-Learning.mp4" type="video/mp4" allowfullscreen>">
 </td>
 <td align="center">
 <img src="https://cdn2.ticbeat.com/src/uploads/2018/06/elearning-810x602.jpg?x32709" height="550" width="650">
@@ -49,7 +49,7 @@
 <tr>
 <td align="center">
 <video controls width="750" height="650">
-<video src="http://download1081.mediafire.com/1e1boxf5cwug/fddhjlcv9vavbiw/%C2%BFQue+es+el+B-Learning.mp4" allowfullscreen></iframe>">
+<video src="http://download1081.mediafire.com/1e1boxf5cwug/fddhjlcv9vavbiw/%C2%BFQue+es+el+B-Learning.mp4" allowfullscreen>">
 </td>
 <td align="center">
 <img src="https://cdn.goconqr.com/uploads/media/image/11833101/desktop_f05b9a26-bdcb-4a84-b180-c752eaeceb97.png" height="550" width="650">
@@ -66,7 +66,7 @@
 <tr>
 <td align="center">
 <video controls width="750" height="650">
-<video src="http://download2266.mediafire.com/eu9t1cual19g/p6g9cxkdge8knkk/Mobile+learning+-+Espa%C3%B1ol.mp4" type="video/mp4" allowfullscreen></iframe>">
+<video src="http://download2266.mediafire.com/eu9t1cual19g/p6g9cxkdge8knkk/Mobile+learning+-+Espa%C3%B1ol.mp4" type="video/mp4" allowfullscreen>">
 </td>
 <td align="center">
 <img src="https://userscontent2.emaze.com/images/00036f15-d194-4584-998d-ecbac1d125cb/f032fa22cf68e62d26fc523ed15731ab.png" height="550" width="650">
