--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 </td>
 </tr>
 </table>
-<font size="20"><h3 class=headberdar">Más Información</h3></font>
+<font color="white" size="20"><h3 class=headberdar">Más Información</h3></font>
 <ul class="submenú">
 <font size="20"><li><a href="https://www.e-abclearning.com/queesunaplataformadeelearning/">E learning</a></li></font>
 <font size="20"><li><a href="https://www.game-learn.com/todo-necesitas-saber-sobre-b-learning-definicion-ejemplos/">B learning</a></li></font>
