--- a/index.html
+++ b/index.html
@@ -60,32 +60,32 @@
 <br><br>
 
 
-<font color="black" size="24"> <p><h1> Año Jubilar Lasallista </p></h1> </font>
-<label for="Pregunta">Que es el Año Jubilar Lasallista?</label>
+<font color="black" size="24"> <p><h1> AÃ±o Jubilar Lasallista </p></h1> </font>
+<label for="Pregunta">Que es el AÃ±o Jubilar Lasallista?</label>
 <br><br>
 <textarea name="Pregunta" rows="10" cols="70"></textarea>
 <br><br>
-<label for="Pregunta">Porque se celebra el Año Jubilar Lasallista?</label>
+<label for="Pregunta">Porque se celebra el AÃ±o Jubilar Lasallista?</label>
 <br><br>
 <textarea name="Pregunta" rows="10" cols="70"></textarea>
 <br><br>
-<label for="Pregunta">Cual es el lema del Año Jubilar Lasallista 2019?</label>
+<label for="Pregunta">Cual es el lema del AÃ±o Jubilar Lasallista 2019?</label>
 <br><br>
 <textarea name="Pregunta" rows="10" cols="70"></textarea>
 <br><br>
-<label for="Pregunta">Cuando comienza y termina el Año Jubilar Lasallista?</label>
+<label for="Pregunta">Cuando comienza y termina el AÃ±o Jubilar Lasallista?</label>
 <br><br>
 <textarea name="Pregunta" rows="10" cols="70"></textarea>
 <br><br>
-<label for="Pregunta">Que nos recuerda el Papa Francisco en este Año Jubilar Lasallista?</label>
+<label for="Pregunta">Que nos recuerda el Papa Francisco en este AÃ±o Jubilar Lasallista?</label>
 <br><br>
 <textarea name="Pregunta" rows="10" cols="70"></textarea>
 <br><br>
-<label for="Pregunta">Que oportunidades nos ofrece este año Jubilar Lasallista?</label>
+<label for="Pregunta">Que oportunidades nos ofrece este aÃ±o Jubilar Lasallista?</label>
 <br><br>
 <textarea name="Pregunta" rows="10" cols="70"></textarea>
 <br><br>
-<label for="Pregunta">Segun su opinion, Con que actitud debemos celebrar este Año Jubilar Lasallista?</label>
+<label for="Pregunta">Segun su opinion, Con que actitud debemos celebrar este AÃ±o Jubilar Lasallista?</label>
 <br><br>
 <textarea name="Pregunta" rows="10" cols="70"></textarea>
 <br><br>
