--- a/index.html
+++ b/index.html
@@ -58,8 +58,6 @@
 <br><br>
 <textarea name="Pregunta" rows="10" cols="70"></textarea>
 <br><br>
-
-
 <font color="black" size="24"> <p><h1> Año Jubilar Lasallista </p></h1> </font>
 <label for="Pregunta">Que es el Año Jubilar Lasallista?</label>
 <br><br>
@@ -115,9 +113,19 @@
 <br><br>
 <textarea name="Pregunta" rows="10" cols="70"></textarea>
 <br><br>
+<label for="Pregunta">Que harias tu (joven de ahora) para proteger el planeta tierra?</label>
+<br><br>
+<textarea name="Pregunta" rows="10" cols="70"></textarea>
+<br><br>
+<label for="Pregunta">Que te parece la politica de “No mas bolsas plasticas” en Panama?</label>
+<br><br>
+<textarea name="Pregunta" rows="10" cols="70"></textarea>
+<br><br>
+<label for="Pregunta">Que opinas sobre no usar mas carrizos plasticos?</label>
+<br><br>
+<textarea name="Pregunta" rows="10" cols="70"></textarea>
+<br><br> 
 <input type="button" value="Enviar">
 </form>
-
-
 </body>
 </html>
